force-app/main/default/objects/Product2/fields/Prix_unitaire_ht__c.field-meta.xml
<CustomField>
    <fullName>Prix_unitaire_ht__c</fullName>
    <label>Prix unitaire HT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>