force-app/main/default/objects/Product2/fields/Reference_article__c.field-meta.xml
<CustomField>
    <fullName>Reference_article__c</fullName>
    <label>Référence article</label>
    <length>255</length>
    <type>Text</type>
</CustomField>