force-app/main/default/objects/Product2/listViews/Produits.listView-meta.xml
<ListView>
    <fullName>Produits</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Reference_article__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <label>Mes produits</label>
</ListView>